[package]
name = "pallet-ddc-staking"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
codec.workspace = true
hex-literal.workspace = true
log.workspace = true
scale-info.workspace = true

# Substrate / Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-io", "sp-runtime", "sp-std"] }

# Cere dependencies
ddc-primitives.workspace = true

[dev-dependencies]
lazy_static = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-contracts.workspace = true
pallet-ddc-clusters = { workspace = true, default-features = true }
pallet-ddc-nodes = { workspace = true, default-features = true }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
  "polkadot-sdk/try-runtime",
]
