[package]
name = "pallet-ddc-staking"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
codec.workspace = true
hex-literal.workspace = true
log.workspace = true
scale-info.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-io", "sp-runtime", "sp-std"] }

# Cere dependencies
ddc-primitives.workspace = true

[dev-dependencies]
lazy_static = { workspace = true, default-features = true }
pallet-ddc-clusters = { workspace = true, default-features = true }
pallet-ddc-nodes = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
polkadot-sdk = { workspace = true, default-features = true, features = ["pallet-balances", "pallet-contracts", "pallet-insecure-randomness-collective-flip", "pallet-timestamp", "sp-core", "sp-tracing"] }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
  "polkadot-sdk/try-runtime",
]
