[package]
name = "pallet-ddc-validator"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
byte-unit = { workspace = true }
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

# Substrate dependencies
frame-election-provider-support = { workspace = true, optional = true }
frame-support = { workspace = true, optional = true }
frame-system = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-keystore = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-staking = { workspace = true, optional = true }
sp-std = { workspace = true, optional = true }

# Cere dependencies
ddc-primitives = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true }
pallet-staking-reward-curve = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }


[features]
default = ["std"]
std = [
    "codec/std",
    "frame-election-provider-support/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keystore",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
]
