[package]
name = "pallet-ddc-verification"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
array-bytes = { workspace = true }
base64ct = { workspace = true }
# 3rd-party dependencies
codec = { workspace = true }
# Cere dependencies
ddc-primitives = { workspace = true }
# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-election-provider-support = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
polkadot-ckb-merkle-mountain-range = { workspace = true }
rand = { workspace = true, features = ["small_rng", "alloc"], default-features = false }
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true }
pallet-session = { workspace = true, default-features = true }
pallet-staking = { workspace = true, default-features = true }
pallet-staking-reward-curve = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true, default-features = true }
sp-keystore = { workspace = true }

[features]
default = ["std"]
std = [
  "rand/std",
  "hex/std",
  "polkadot-ckb-merkle-mountain-range/std",
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-std/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-application-crypto/std",
  "sp-staking/std",
  "frame-election-provider-support/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
