[package]
name = 'pallet-cere-ddc'
version = '4.8.1'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2021'
homepage = 'https://www.cere.network/'
license = 'Unlicense'
readme = 'README.md'
repository = 'https://github.com/Cerebellum-Network/ddc-pallet'
description = 'FRAME pallet template for defining custom runtime logic.'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ['std']
std = [
  'codec/std',
  'sp-io/std',
  'sp-std/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
]

[package.metadata.cargo-machete]
ignored = ["scale-info", "codec"]
