[package]
name = "pallet-erc20"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# 3rd-party dependencies
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Cere dependencies
pallet-chainbridge = { workspace = true }
pallet-erc721 = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "pallet-chainbridge/std",
  "pallet-erc721/std",
]
try-runtime = [
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-chainbridge/try-runtime",
  "pallet-erc721/try-runtime",
]

[package.metadata.cargo-machete]
ignored = ["scale-info"]
