[package]
name = "pallet-erc20"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# 3rd-party dependencies
codec.workspace = true
scale-info.workspace = true

# Substrate / Polkadot SDK
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-balances",
  "sp-arithmetic",
  "sp-core",
  "sp-io",
  "sp-runtime",
  "sp-std",
] }

# Cere dependencies
pallet-chainbridge.workspace = true
pallet-erc721.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "polkadot-sdk/std",
  "pallet-chainbridge/std",
  "pallet-erc721/std",
]
runtime-benchmarks = [
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
  "pallet-chainbridge/runtime-benchmarks",
  "pallet-erc721/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
  "pallet-chainbridge/try-runtime",
  "pallet-erc721/try-runtime",
]

[package.metadata.cargo-machete]
ignored = ["scale-info"]
