[package]
name = "pallet-erc721"
version = "4.8.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# 3rd-party dependencies
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Cere dependencies
pallet-chainbridge = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "pallet-chainbridge/std",
]
