[package]
name = "pallet-origins"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
cere-runtime-common.workspace = true
codec.workspace = true
scale-info.workspace = true
serde.workspace = true

# Substrate / Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-core", "sp-runtime", "sp-std"] }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "polkadot-sdk/std",
]
runtime-benchmarks = [
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
